--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
     "description": "Work with Parse in Laravel.",
     "license": "MIT",
     "require": {
-        "php": ">=5.6"
+        "laravel/framework": "5.2.*",
+        "parse/php-sdk": "~1.2.0",
+        "php": ">=5.5"
     },
     "autoload": {
         "psr-4": {
