--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": ["laravel", "parse", "sdk", "parse-sdk", "eloquent"],
     "license": "MIT",
     "require": {
-        "laravel/framework": "~5.3.0",
+        "laravel/framework": ">=5.0",
         "parse/php-sdk": "~1.2.0",
         "php": ">=5.5"
     },
