--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
     "name": "parziphal/parse",
-    "description": "Work with Parse in Laravel.",
+    "description": "An Eloquent-like interface for Parse",
     "keywords": ["laravel", "parse", "sdk", "parse-sdk", "eloquent"],
     "license": "MIT",
     "require": {
-        "laravel/framework": ">=5.0",
-        "parse/php-sdk": "~1.2.0",
-        "php": ">=5.6.4"
+        "php": ">=5.5.9",
+        "laravel/framework": "5.2.*|5.3.*",
+        "parse/php-sdk": "~1.2.0"
     },
     "autoload": {
         "psr-4": {
