--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "require": {
     "php": ">=5.5.9",
     "laravel/framework": "5.2.*|5.3.*",
-    "parse/php-sdk": "~1.2.0"
+    "evaldas-leliuga/parse-php-sdk": "dev-master"
   },
   "autoload": {
     "psr-4": {
