--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "require": {
     "php": ">=5.5.9",
     "laravel/framework": "5.3.*|5.4.*",
-    "evaldas-leliuga/parse-php-sdk": "dev-master"
+    "evaldas-leliuga/parse-php-sdk": "1.2.*"
   },
   "autoload": {
     "psr-4": {
