--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.2.*|5.3.*",
+        "laravel/framework": "5.2.*|5.3.*|5.4.*",
         "parse/php-sdk": "~1.2.0"
     },
     "autoload": {
