--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,19 @@
     "license": "MIT",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.2.*|5.3.*|5.4.*|5.5",
+        "laravel/framework": "^5.2",
         "parse/php-sdk": "~1.2.0"
     },
     "autoload": {
         "psr-4": {
             "Parziphal\\Parse\\": "src/"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Parziphal\\Parse\\ParseServiceProvider"
+            ]
         }
     }
 }
